Ajustes no Dasboard02 - JavaScript

--- a/src/app/components/pages/file-manager/filemanager/filemanager.component.html
+++ b/src/app/components/pages/file-manager/filemanager/filemanager.component.html
@@ -208,7 +208,7 @@
       class="flex p-4 flex-wrap gap-2 items-center justify-between border-b dark:border-defaultborder/10"
     >
       <div>
-        <h6 class="font-semibold mb-0 text-[1rem]">Folders</h6>
+        <h6 class="font-semibold mb-0 text-[1rem]">Pastas</h6>
       </div>
       <div class="flex gap-2">
         <button
@@ -342,7 +342,7 @@
     <ngx-simplebar>
       <div class="p-4 file-folders-container" id="file-folders-container">
         <div class="flex mb-4 items-center justify-between">
-          <p class="mb-0 font-semibold text-[.875rem]">My Files</p>
+          <p class="mb-0 font-semibold text-[.875rem]">Meus arquivos</p>
           <button type="button" class="btn btn-sm btn-primary-light">
             Ver tudo
           </button>
